--- a/src/components/gameboard/Gameboard.css
+++ b/src/components/gameboard/Gameboard.css
@@ -28,3 +28,15 @@
   display: flex;
   flex-direction: column;
 }
+
+.timer-wrapper {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-areas:
+    "left-sidebar timer-container right-sidebar";
+}
+
+.timer-container {
+  grid-area: timer-container;
+}
