--- a/src/components/timer/Timer.css
+++ b/src/components/timer/Timer.css
@@ -1,11 +1,12 @@
 .timer-component {
   display: flex;
-  padding-left: 10px;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .icon {
   font-size: 42px;
-  padding: 10px;
+  padding: 10px 10px 10px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
