switch to using bootstrap instead of purecss

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -2,3 +2,11 @@
   transition: all 0.2s ease-out;
   box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
 }
+
+.game-card p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
