--- a/src/components/timer/Timer.css
+++ b/src/components/timer/Timer.css
@@ -17,20 +17,11 @@
   width: 100%;
 }
 
-.progress-bar {
+.progress {
   height: 8px;
-  width: 100%;
+  border-radius: 0px;
 }
 
-.progress-bar .background {
-  width: 100%;
-  height: 100%;
-  background-color: grey;
-}
-
-.progress-bar .completed {
-  height: 100%;
+.progress-bar {
   background-color: black;
-  position: relative;
-  top: -100%;
 }
