--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,16 @@
 .container-slim {
   max-width: 400px;
 }
+
+/* Toastify Overrides because animations are hard to decouple */
+.Toastify__toast--default.alert-danger {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
+
+.Toastify__toast--default.alert-info {
+  color: #0c5460;
+  background-color: #d1ecf1;
+  border-color: #bee5eb;
+}
