--- a/src/components/gameboard/Gameboard.css
+++ b/src/components/gameboard/Gameboard.css
@@ -29,14 +29,14 @@
   flex-direction: column;
 }
 
-.timer-wrapper {
+.timer-section-wrapper {
   display: grid;
   grid-gap: 20px;
   grid-template-columns: 1fr 4fr 1fr;
   grid-template-areas:
-    "left-sidebar timer-container right-sidebar";
+    "left-sidebar timer-section-container right-sidebar";
 }
 
-.timer-container {
-  grid-area: timer-container;
+.timer-section-container {
+  grid-area: timer-section-container;
 }
