--- a/src/components/ChatWidget/ChatWidget.css
+++ b/src/components/ChatWidget/ChatWidget.css
@@ -1,8 +1,12 @@
+.chat-container {
+  width: 100%;
+}
+
 .fab-chat {
   width: 70px;
   height: 70px;
   text-align: center;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 0;
   margin: 0 10px 10px 0;
@@ -14,19 +18,20 @@
 }
 
 .chat-window {
-  position: absolute;
+  width: 100%;
+  max-width: 250px;
+  height: 200px;
+  position: fixed;
   bottom: 80px;
-  right: 0;
+  right: 45px;
   box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
 }
 
 .messages {
+  height: 200px;
   display: block;
   background: #FCFCFC;
-  padding: 10px;
-  max-width: 250px;
-  height: 200px;
-  width: 250px;
+  padding: 5px;
   overflow: scroll;
 }
 
