--- a/src/components/ChatWidget/ChatWidget.css
+++ b/src/components/ChatWidget/ChatWidget.css
@@ -27,6 +27,20 @@
   box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
 }
 
+@media (max-width: 576px) {
+  .chat-window {
+    max-width: 100%;
+    padding: 10px;
+    height: 100%;
+    right: 0px;
+    bottom: unset;
+  }
+
+  .chat-container {
+    height: 100%;
+  }
+}
+
 .messages {
   height: 200px;
   display: block;
