--- a/src/components/ChatWidget/ChatWidget.css
+++ b/src/components/ChatWidget/ChatWidget.css
@@ -15,14 +15,15 @@
   color: white;
   background: black;
   box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.8);
+  cursor: pointer;
 }
 
 .chat-window {
   width: 100%;
   max-width: 250px;
-  height: 200px;
+  height: 250px;
   position: fixed;
-  bottom: 80px;
+  bottom: 130px;
   right: 45px;
   box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
 }
@@ -31,9 +32,9 @@
   .chat-window {
     max-width: 100%;
     padding: 10px;
-    height: 100%;
+    height: 50%;
     right: 0px;
-    bottom: unset;
+    bottom: 100px;
   }
 
   .chat-container {
@@ -41,8 +42,18 @@
   }
 }
 
+.chat-window > .controls {
+  background: black;
+  color: #FCFCFC;
+}
+
+.chat-window > .controls > .close-btn {
+  font-size: 18px;
+  cursor: pointer;
+}
+
 .messages {
-  height: 200px;
+  height: 100%;
   display: block;
   background: #FCFCFC;
   padding: 5px;
@@ -53,12 +64,13 @@
   color: black;
   background: #FCFCFC;
   text-align: left;
-  margin: 5px 0;
+  margin-top: 15px;
   padding: 5px;
   border-radius: 5px;
+  box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
 }
 
 .message-entry:nth-child(even) {
   color: white;
-  background: black;
+  background: #4A4A4A;
 }
