--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,6 +3,11 @@
   box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
 }
 
+.game-card {
+  border-radius: 10px;
+  cursor: "pointer";
+}
+
 .game-card p {
   font-weight: bold;
   display: block;
